[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

[lib]
name = "benchmark"
path = "src/lib.rs"

[[bin]]
name = "benchmark-receive"
path = "src/receive.rs"

[[bin]]
name = "benchmark-send"
path = "src/send.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = "4.4.6"
env_logger = "0.10.0"
futures = "0.3.28"
futures-timer = "3.0.2"
libp2p = { version = "0.52.3", features = ["dns", "dcutr", "identify", "noise", "ping", "quic", "relay", "tcp", "yamux", "async-std"] }
log = "0.4.20"
